--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -1,6 +1,7 @@
 :root {
   --body-bg-color: #E6EEF9;
-  --primary-color: #3176FF;;
+  --primary-color: #3176FF;
+  ;
   --secondary-color: #2ecc71;
   --font-size-xl: 4rem;
   --font-size-lg: 3rem;
@@ -10,8 +11,8 @@
 }
 
 body {
-    background-color: var(--body-bg-color);
-  }
+  background-color: var(--body-bg-color);
+}
 
 .navbar {
   background-color: white;
@@ -19,22 +20,27 @@ body {
   margin-top: 20px;
   padding: 15px;
 }
+
 .navbar-brand {
   font-size: var(--font-size-sm);
   font-weight: bold;
 }
+
 .hero {
   text-align: center;
   margin-top: 50px;
 }
+
 .hero h1 {
   font-size: var(--font-size-xl);
   font-weight: bold;
 }
+
 .hero p {
   font-size: var(--font-size-sm);
   color: gray;
 }
+
 .btn-primary {
   margin-top: 20px;
   border-radius: 20px;
@@ -43,7 +49,6 @@ body {
 
 .nav-link:hover {
   color: var(--primary-color);
-  font-weight: bold;
 }
 
 /* Styling for clickable list */
@@ -71,4 +76,22 @@ body {
 /* For responsiveness */
 .column {
   width: 33%;
+}
+
+.profile-circle {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.problem-column {
+  padding: 5px;
+  flex-grow: 1;
+  min-width: 50px; /* Minimum width to allow flexibility */
+  max-width: 200px; /* Upper limit for column width */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; /* Ensure long text is truncated with an ellipsis */
 }
