--- a/templates/common/navbar.html
+++ b/templates/common/navbar.html
@@ -9,11 +9,7 @@
         <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
 
         {% if logged_in %}
-            <li class="nav-item">
-                <a class="btn btn-outline-dark rounded-circle profile-circle" href="/profile" >
-                    {{ user_initials }}
-                </a>
-            </li>
+        <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
             {% else %}
             <li class="nav-item">
                 <a class="btn btn-outline-primary" href="/signIn">Sign In</a>
