--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -7,6 +7,7 @@
 
 
 <div class="container mt-5">
+  <h3> Leaderboard </h3>
 
   <table id="leaderBoardTable" class="table table-striped" style="width:100%">
     <thead>
@@ -23,7 +24,7 @@
         <td>{{user.rank}}</td>
         <td>{{user.name}}</td>
         <td>{{user.solved}}</td>
-        <td>{{user.join_date}}</td>
+        <td>{{user.created_at}}</td>
       </tr>
       {% endfor %}
 
