added diesel and basic psql schema

--- a/templates/problem.html
+++ b/templates/problem.html
@@ -19,7 +19,7 @@
       <div class="card-body">
         <h3 class="card-title">{{problem.name}}</h3>
         <p class="card-text">
-          {{problem.description}}
+          {{problem.problem_statement}}
         </p>
       </div>
     </div>
