added user and problem db queries

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -21,9 +21,9 @@
     <tbody>
       {% for user in users %}
       <tr>
-        <td>{{user.rank}}</td>
-        <td>{{user.name}}</td>
-        <td>{{user.solved}}</td>
+        <td>{{user.id}}</td>
+        <td>{{user.username}}</td>
+        <td>5</td>
         <td>{{user.created_at}}</td>
       </tr>
       {% endfor %}
