--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,13 +17,13 @@
   <!-- Problem Statement -->
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">{{user.name}}</h3>
+      <h3 class="card-title">{{user.username}}</h3>
       <p class="card-text">
         Email: {{user.email}} <br>
-        Rank: {{user.rank}} <br>
+        Rank: {{user.id}} <br>
         Join Date: {{user.created_at}} <br>
-        Total Problems Attempted: {{user.attempted}} <br>
-        Total Problems Solved: {{user.solved}} <br>
+        Total Problems Attempted: 6 <br>
+        Total Problems Solved: 5 <br>
       </p>
     </div>
   </div>
