--- a/templates/problem.html
+++ b/templates/problem.html
@@ -8,7 +8,7 @@
 
 <div class="container mt-5">
 
-  <h3> Problem: {{problem.number}} </h3>
+  <h3> Problem: {{problem.id}} </h3>
 </div>
 
 
@@ -17,7 +17,7 @@
     <!-- Problem Statement -->
     <div class="card">
       <div class="card-body">
-        <h3 class="card-title">{{problem.name}}</h3>
+        <h3 class="card-title">{{problem.title}}</h3>
         <p class="card-text">
           {{problem.problem_statement}}
         </p>
@@ -39,7 +39,7 @@
     </button>
     <div class="collapse mt-2" id="hint">
       <div class="card card-body">
-        {{problem.hint}}
+        {{problem.hint_or_default()}}
       </div>
     </div>
   </div>
