--- a/templates/problems.html
+++ b/templates/problems.html
@@ -22,11 +22,11 @@
     <tbody>
       {% for problem in problems %}
       <tr>
-        <td>{{problem.number}}</td>
-        <td> <a href="problem/{{problem.number}}"> {{problem.name}} </a> </td>
+        <td>{{problem.id}}</td>
+        <td> <a href="problem/{{problem.id}}"> {{problem.problem_statement}} </a> </td>
         <td>{{problem.tags}}</td>
         <td>{{problem.difficulty}}</td>
-        <td>{{problem.solvers}}</td>
+        <td>{{problem.solved_count}}</td>
         <td>{{problem.created_at}}</td>
       </tr>
       {% endfor %}
