added login session

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,9 @@
   <!-- Problem Statement -->
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">{{user.username}}</h3>
+      <h3 class="card-title">{{user.username}} 
+        <a class="btn btn-outline-primary" href="/sign_out">Sign out</a>
+      </h3>
       <p class="card-text">
         Email: {{user.email}} <br>
         Rank: {{user.id}} <br>
