--- a/templates/problem.html
+++ b/templates/problem.html
@@ -62,6 +62,7 @@
     fetch(url)
       .then(response => response.json())
       .then(data => {
+        console.log(data)
         if (data === true) {
           alert("Correct Answer!");
         } else {
