--- a/templates/common/navbar.html
+++ b/templates/common/navbar.html
@@ -1,21 +1,30 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg container">
-  <a class="navbar-brand" href="/">
-    <img src="/static/images/juspay-logo.svg" alt="logo" width="30" height="30" class="d-inline-block align-top">
-    LEARN.</a>
-  <div class="collapse navbar-collapse justify-content-end">
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="/problems">Problems</a></li>
-      <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
-
-      {% if logged_in %}
-      <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
-      {% else %}
-      <li class="nav-item">
-        <a class="btn btn-outline-primary" href="/sign_in">Sign In</a>
-      </li>
-      {% endif %}
-
-    </ul>
+<nav class="navbar navbar-expand-lg container navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="/">
+      <img src="/static/images/juspay-logo.svg" alt="logo" width="30" height="30" class="d-inline-block align-top">
+      LEARN.
+    </a>
+    
+    <!-- Toggler button for collapse -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="/problems">Problems</a></li>
+        <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
+        
+        {% if logged_in %}
+        <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+        {% else %}
+        <li class="nav-item">
+          <a class="btn btn-outline-primary" href="/sign_in">Sign In</a>
+        </li>
+        {% endif %}
+        
+      </ul>
+    </div>
   </div>
 </nav>
