--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 
       </span></h1>
     <p>quote</p>
-    <a href="#" class="btn btn-primary">Start Now</a>
+    <a href="/problems" class="btn btn-primary">Start Now</a>
   </div>
 
 
