--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,8 +17,8 @@
   <!-- Problem Statement -->
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">{{user.username}} 
-        <a class="btn btn-outline-primary" href="/sign_out">Sign out</a>
+      <h3 class="card-title">{{user.username}}
+        <a class="btn btn-outline-danger  float-end" href="/sign_out">Sign out</a>
       </h3>
       <p class="card-text">
         Email: {{user.email}} <br>
