added join date show

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -27,7 +27,7 @@
         <td>{{user.id}}</td>
         <td>{{user.username}}</td>
         <td>5</td>
-        <td>{{user.created_at}}</td>
+        <td>{{user.timestamp_to_date()}}</td>
       </tr>
       {% endfor %}
 
