--- a/templates/problems.html
+++ b/templates/problems.html
@@ -32,7 +32,7 @@
         <td><span class="badge bg-secondary">{{problem.tags}}</span></td>
         <!-- <td>{{problem.difficulty}}</td> -->
         <td>{{problem.solved_count}}</td>
-        <td>{{problem.timestamp_to_date()}}</td>
+        <td>{{problem.created_ts_show()}}</td>
       </tr>
       {% endfor %}
 
