--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,7 +23,7 @@
       <p class="card-text">
         Email: {{user.email}} <br>
         Rank: {{user.id}} <br>
-        Join Date: {{user.created_at}} <br>
+        Join Date: {{user.created_ts_show()}} <br>
         Total Problems Attempted: 6 <br>
         Total Problems Solved: 5 <br>
       </p>
