--- a/templates/problem.html
+++ b/templates/problem.html
@@ -9,8 +9,10 @@
 <div class="container mt-5">
 
   <h3> Problem: {{problem.id}} </h3>
+  {% for tag in problem.get_tags() %}
+  <span class="badge bg-secondary">{{tag}}</span>
+  {% endfor %}
 </div>
-
 
 
 <div class="container mt-3">
@@ -26,25 +28,24 @@
 
 
   <br>
-  <div id="correct-alert"  style="display: none;"  class="alert alert-success" role="alert">
-    Solved! <a href="/problems" class="alert-link">Find more to solve</a>.
+  <div id="correct-alert" style="display: none;" class="alert alert-success" role="alert">
   </div>
-  <div id="incorrect-alert"  style="display: none;"  class="alert alert-danger" role="alert">
+  <div id="incorrect-alert" style="display: none;" class="alert alert-danger" role="alert">
   </div>
 
-  
+
   {% if logged_in %}
 
-    {% if already_solved %}
-    <br>
-    <div class="alert alert-success" role="alert">
-      Solved! <a href="/problems" class="alert-link">Find more to solve</a>.
-    </div>
+  {% if already_solved %}
+  <br>
+  <div class="alert alert-success" role="alert">
+    Solved! <a href="/problems" class="alert-link">Find more to solve</a>.
+  </div>
 
-    {% else %}
+  {% else %}
 
-    <!-- Input Field and Submit Button -->
-    <div id="submit-div">
+  <!-- Input Field and Submit Button -->
+  <div id="submit-div">
     <div class="d-flex justify-content-center mt-4">
       <input type="number" class="form-control w-50" id="inputNumber"
         onkeydown="if(event.key === 'Enter'){ document.getElementById('submitButton').click(); return false; }"
@@ -55,8 +56,8 @@
     </div>
   </div>
 
-    {% endif %}
-  
+  {% endif %}
+
   {% else %}
   <div class="d-flex justify-content-center mt-4">
     <a href="/sign_in" class="btn btn-primary">Sign In to Submit Solution</a>
@@ -88,7 +89,7 @@
   function showSolvedAlert(val) {
     document.getElementById("incorrect-alert").style.display = "none";
     document.getElementById("submit-div").style.display = "none";
-    document.getElementById("correct-alert").innerHTML = `correct answer! ${val}`;
+    document.getElementById("correct-alert").innerHTML = `correct answer! ${val} <br><a href="/problems" class="alert-link">Find more to solve</a>.`;
     document.getElementById("correct-alert").style.display = "block";
   }
 
@@ -111,7 +112,7 @@
         } else if (data === false) {
           showIncorrectAlert(inputNumber);
         }
-        else if (data === "Unauthorized"){
+        else if (data === "Unauthorized") {
           // Redirect to sign out page
           window.location.href = "/sign_out";
         }
