--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,8 +24,7 @@
         Email: {{user.email}} <br>
         Rank: {{user.id}} <br>
         Join Date: {{user.created_ts_show()}} <br>
-        Total Problems Attempted: 6 <br>
-        Total Problems Solved: 5 <br>
+        Total Problems Solved: {{user.solved}} <br>
       </p>
     </div>
   </div>
