--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,9 +22,10 @@
       </h3>
       <p class="card-text">
         Email: {{user.email}} <br>
-        Rank: {{user.id}} <br>
+        <!-- Rank: {{user.id}} <br> -->
         Join Date: {{user.created_ts_show()}} <br>
         Total Problems Solved: {{user.solved}} <br>
+        <a href="/problems" class="text-primary alert-link">Find more to solve</a>.
       </p>
     </div>
   </div>
