--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 {% include "common/navbar.html" %}
 
-<body class="min-vh-100">
+<body>
   <!-- Hero Section -->
   <div class="hero">
     <h1>Learn <br><span style="color:#3176FF;">
@@ -41,8 +41,9 @@
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
-            <h3 class="card-title">Pillar 1</h3>
-            <p class="card-text">Dedicated to helping you solve problems effectively. Get structured guidance and step-by-step approaches to complex challenges.</p>
+            <img src="/static/images/bal_c.webp" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
+            <h3 class="card-title">Perseverance</h3>
+            <p class="card-text">Embrace every challenge as an opportunity to grow.</p>
           </div>
         </div>
       </div>
@@ -50,8 +51,9 @@
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
-            <h3 class="card-title">Pillar 2</h3>
-            <p class="card-text">Build critical thinking skills. We encourage curiosity and reasoning, helping you form a solid foundation for any challenge.</p>
+            <img src="/static/images/comp_c.jpg" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
+            <h3 class="card-title">Comprehension</h3>
+            <p class="card-text">Dive deeper to uncover the logic behind each solution.</p>
           </div>
         </div>
       </div>
@@ -59,8 +61,9 @@
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
-            <h3 class="card-title">Pillar 3</h3>
-            <p class="card-text">Cultivate resilience. Learn strategies to keep moving forward, even when facing setbacks and complex obstacles.</p>
+            <img src="/static/images/explore_c.jpg" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
+            <h3 class="card-title">Growth through Exploration</h3>
+            <p class="card-text">Expand your horizons with each problem solved.</p>
           </div>
         </div>
       </div>
