--- a/templates/problems.html
+++ b/templates/problems.html
@@ -48,7 +48,8 @@
 
 <script>
   new DataTable('#problemTable', {
-    order: [[3, 'desc']]
+    order: [[3, 'desc']],
+    order: [[0, 'asc']]
   });
 </script>
 
