--- a/templates/common/foot.html
+++ b/templates/common/foot.html
@@ -1,3 +1,3 @@
-<footer class="bg-dark text-white text-center py-2 bfoot">
+<!-- <footer class="bg-dark text-white text-center py-2 bfoot">
     <small>&copy; JusLearn | <a href="#" class="text-white">Contact Us</a></small>
-</footer>
+</footer> -->
