--- a/templates/common/navbar.html
+++ b/templates/common/navbar.html
@@ -5,17 +5,19 @@
       <img src="/static/images/juspay-logo.svg" alt="logo" width="30" height="30" class="d-inline-block align-top">
       LEARN.
     </a>
-    
+
     <!-- Toggler button for collapse -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="/problems">Problems</a></li>
         <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
-        
+        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+
         {% if logged_in %}
         <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
         {% else %}
@@ -23,7 +25,7 @@
           <a class="btn btn-outline-primary" href="/sign_in">Sign In</a>
         </li>
         {% endif %}
-        
+
       </ul>
     </div>
   </div>
