refactred about us

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,12 +17,12 @@
       Welcome to your personal odyssey of exploration and self-improvement—a realm where curiosity ignites discovery,
       and learning transforms into a profound journey. We believe that bridging the gap between academic knowledge and
       real-world application empowers you to reach unparalleled heights.
-
+        <br><br>
       <strong>Our Mission</strong>
       <p>Our mission is to kindle your passion for learning by presenting thought-provoking challenges that encourage you
-      to think deeply and differently. We offer a platform where you can apply core concepts from computer science,
+      to think deeply and differently. A platform where you can apply core concepts from computer science,
       mathematics, logic, and more to practical scenarios, turning theoretical understanding into tangible skills.</p>
-
+      <br>
       <strong>What We Offer</strong>
       <ul>
         <li><strong>Progressive Challenges:</strong> Refresh your foundational knowledge with problems designed to solidify basic concepts.
@@ -41,7 +41,6 @@
       you to:</p>
       <ul>
         <li>Revisit and strengthen your foundational knowledge.</li>
-        <li>Dive into advanced concepts and stay alongside of cutting-edge developments.</li>
         <li>Connect academic theories with their real-world applications.</li>
         <li>Refine your critical thinking and analytical skills.</li>
         <li>Foster a lifelong commitment to learning and innovation.</li>
@@ -54,7 +53,7 @@
     <h1 class="display-6">Code of Conduct</h1>
 
     <p>
-      Welcome to our learning community. Please keep these guidelines in mind:
+      Please keep these guidelines in mind:
 
       <ul>
         <li><strong>Focus on Learning, Not Just Answers:</strong> In a world of internet and AI, it's easy to find answers. Prioritize gaining knowledge over simply finding answers.</li>
