quotes switched position

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,9 +11,8 @@
     <h1 class="display-6">About JusLearn</h1>
 
     <p>
-      <mark>"And those who were seen dancing were thought to be insane by those who could not hear the music." —
-        Friedrich Nietzsche </mark><br>
-        <br>
+      <mark> "Education is not the learning of facts, but the training of the mind to think." - Albert Einstein  </mark>
+      <br><br>
       Welcome to your personal odyssey of exploration and self-improvement—a realm where curiosity ignites discovery,
       and learning transforms into a profound journey. We believe that bridging the gap between academic knowledge and
       real-world application empowers you to reach unparalleled heights.
@@ -45,7 +44,9 @@
         <li>Refine your critical thinking and analytical skills.</li>
         <li>Foster a lifelong commitment to learning and innovation.</li>
       </ul>
-      <mark> "Education is not the learning of facts, but the training of the mind to think." </mark>
+      <mark>"And those who were seen dancing were thought to be insane by those who could not hear the music." —
+        Friedrich Nietzsche </mark><br>
+        <br>
     </p>
 
 
