--- a/templates/problem.html
+++ b/templates/problem.html
@@ -47,7 +47,7 @@
   <!-- Input Field and Submit Button -->
   <div id="submit-div">
     <div class="d-flex justify-content-center mt-4">
-      <input type="number" class="form-control w-50" id="inputNumber"
+      <input type="text"  maxlength="30" class="form-control w-50" id="inputAnswer"
         onkeydown="if(event.key === 'Enter'){ document.getElementById('submitButton').click(); return false; }"
         data-problem_id="{{problem.id}}" placeholder="Enter your answer..">
     </div>
@@ -106,24 +106,24 @@
   }
 
   function submitSolution() {
-    let inputNumber = document.getElementById("inputNumber").value;
-    let problemId = document.getElementById("inputNumber").getAttribute("data-problem_id");
-    let url = `/api/check_answer/${problemId}/${inputNumber}`;
+    let inputAnswer = document.getElementById("inputAnswer").value;
+    let problemId = document.getElementById("inputAnswer").getAttribute("data-problem_id");
+    let url = `/api/check_answer/${problemId}/${inputAnswer}`;
 
     showSpinner();
     
     // wait for 2 second then do fetch url
     setTimeout(() => {
-      fetchUrl(url, inputNumber);
+      fetchUrl(url, inputAnswer);
     }, 2000);
   }
 
- function fetchUrl(url, inputNumber) {
+ function fetchUrl(url, inputAnswer) {
 
-  if (inputNumber.length > 30 || inputNumber.length === 0) {
+  if (inputAnswer.length > 30 || inputAnswer.length === 0) {
       closeSpinner();
-      showIncorrectAlert(inputNumber);
-      console.log("Invalid input",inputNumber);
+      showIncorrectAlert(inputAnswer);
+      console.log("Invalid input",inputAnswer);
       return;
     }
 
@@ -132,9 +132,9 @@
       .then(data => {
         closeSpinner();
         if (data === true) {
-          showSolvedAlert(inputNumber);
+          showSolvedAlert(inputAnswer);
         } else if (data === false) {
-          showIncorrectAlert(inputNumber);
+          showIncorrectAlert(inputAnswer);
         }
         else if (data === "Unauthorized") {
           // Redirect to sign out page
