--- a/templates/problem.html
+++ b/templates/problem.html
@@ -75,7 +75,7 @@
   <div class="mt-4">
     <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#hint"
       aria-expanded="false" aria-controls="hint">
-      Show Hint/Resources
+      More Curios? click here.
     </button>
     <div class="collapse mt-2" id="hint">
       <div class="card card-body">
