--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,8 @@
         <div class="card h-100">
           <div class="card-body">
             <img src="/static/images/bal_c.webp" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
-            <h3 class="card-title">Perseverance</h3>
-            <p class="card-text">Embrace every challenge as an opportunity to grow.</p>
+            <h3 class="card-title">Foundation</h3>
+            <p class="card-text">Logical reasoning/math are the essence of computer science. Strive to learn the core principles that shape everything.</p>
           </div>
         </div>
       </div>
@@ -52,8 +52,8 @@
         <div class="card h-100">
           <div class="card-body">
             <img src="/static/images/comp_c.jpg" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
-            <h3 class="card-title">Comprehension</h3>
-            <p class="card-text">Dive deeper to uncover the logic behind each solution.</p>
+            <h3 class="card-title">Observation</h3>
+            <p class="card-text">Stay curious and question what you take for granted. Seek to understand how things around you truly work.</p>
           </div>
         </div>
       </div>
@@ -62,8 +62,8 @@
         <div class="card h-100">
           <div class="card-body">
             <img src="/static/images/explore_c.jpg" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
-            <h3 class="card-title">Growth through Exploration</h3>
-            <p class="card-text">Expand your horizons with each problem solved.</p>
+            <h3 class="card-title">Creation</h3>
+            <p class="card-text">Understanding first principles frees you from norms, empowering clarity, innovation, and 10x magic.</p>
           </div>
         </div>
       </div>
