--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -41,8 +41,7 @@
 <script>
 
   new DataTable('#leaderBoardTable', {
-    order: [[2, 'desc']],
-    order: [[0, 'asc']]
+    order: [[1, 'desc']]
   });
 
 </script>
