--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
-            <img src="/static/images/bal_c.webp" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
+            <img src="/static/images/comp_c.jpg" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
             <h3 class="card-title">Foundation</h3>
             <p class="card-text">Logical reasoning/math are the essence of computer science. Strive to learn the core principles that shape everything.</p>
           </div>
@@ -51,7 +51,7 @@
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
-            <img src="/static/images/comp_c.jpg" alt="Pillar 1" class="img-fluid mb-3" style="max-height: 200px;">
+            <img src="/static/images/icbrg.jpg" alt="Pillar 2" class="img-fluid mb-3" style="max-height: 200px;">
             <h3 class="card-title">Observation</h3>
             <p class="card-text">Stay curious and question what you take for granted. Seek to understand how things around you truly work.</p>
           </div>
